Fix 'Renaming a class does not rename constructor/destructor'

With this commit, UMLObject::setNameCmd() is now a virtual function to
allow overriding.

BUG:409732
FIXED-IN:2.28.80 (KDE Applications 19.07.80)